# nv-rom-parser

./: Cargo.toml  README.md
src/: cursor.rs  firmware.rs  lib.rs  main.rs  nvidia.rs  pci_efi.rs  pci_legacy.rs
src/nvidia/: bit.rs  dcb.rs  nbsi.rs
src/nvidia/bit/: nvlink.rs  perf.rs
