[package]
name = "nv-rom-parser"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kharuzhyi <publicantroids@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binread = "2.2.0"
bitflags = "2.4.1"
clap = { version = "4.4.8", features = ["derive"] }
derivative = "2.2.0"
env_logger = "0.10.1"
log = "0.4.20"
modular-bitfield = "0.11.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
simplelog = { version = "0.12.1", features = ["test"] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.50"

[dev-dependencies]
simplelog = "0.12.1"
reqwest = { version = "0.11.22", features = ["blocking"] }
